Step two: Lexer and Parser of the Json